add title to html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <title>Calvinball</title>
     </head>
     <body>
       <script src="calvinball.js"></script>
